--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Factura.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Administrador.cs" />
-    <Compile Include="VisualizarReporte.cs" />
+    <Compile Include="Reporte.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
